--- a/index.html
+++ b/index.html
@@ -167,14 +167,23 @@
                                 <h4 class="card_heading">
                                     Cosmetic Dentistry
                                 </h4>
-                                <p class="card__text">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto, enim non
-                                    tenetur
-                                    corporis distinctio,non tenetur
-                                </p>
-                                <div>
-                                    <a href="#" class="button button-blue">learn more &nbsp; &gt;</a>
+
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            <p class="card__text">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+                                                architecto, enim non
+                                                tenetur
+                                                corporis distinctio,non tenetur
+                                            </p>
+                                            <div>
+                                                <a href="#" class="button button-blue">learn more &nbsp; &gt;</a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
@@ -189,13 +198,20 @@
                             <h4 class="card_heading">
                                 Dental Implants
                             </h4>
-                            <p class="card__text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto, enim non
-                                tenetur
-                                corporis distinctio,non tenetur
-                            </p>
-                            <div>
-                                <a href="#" class="button button-blue">learn more &nbsp; &gt;</a>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto,
+                                            enim non
+                                            tenetur
+                                            corporis distinctio,non tenetur
+                                        </p>
+                                        <div>
+                                            <a href="#" class="button button-blue">learn more &nbsp; &gt;</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -208,13 +224,20 @@
                             <h4 class="card_heading">
                                 Facial Esthetics
                             </h4>
-                            <p class="card__text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto, enim non
-                                tenetur
-                                corporis distinctio,non tenetur
-                            </p>
-                            <div>
-                                <a href="#" class="button button-blue">learn more &nbsp; &gt;</a>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto,
+                                            enim non
+                                            tenetur
+                                            corporis distinctio,non tenetur
+                                        </p>
+                                        <div>
+                                            <a href="#" class="button button-blue">learn more &nbsp; &gt;</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
