Added media querys

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/querys.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600&display=swap" rel="stylesheet">
@@ -71,13 +72,6 @@
             </form>
         </div>
     </nav>
-
-
-
-
-
-
-
 
     <!-- MAIN HEADER -->
 
@@ -158,8 +152,7 @@
     <section class="section-services">
         <div class="container">
             <div class="row">
-
-                <div class="col">
+                <div class="col-md-12 col-12 col-lg-4">
                     <div class="card">
                         <div class="card__content">
                             <div class="card__details">
@@ -167,7 +160,6 @@
                                 <h4 class="card_heading">
                                     Cosmetic Dentistry
                                 </h4>
-
                                 <div class="container">
                                     <div class="row">
                                         <div class="col">
@@ -189,7 +181,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-12 col-12 col-lg-4">
                     <div class="card">
                         <div class="card__content">
 
@@ -217,7 +209,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-12 col-12 col-lg-4">
                     <div class="card">
                         <div class="card__content">
                             <div class="card__picture card__picture-3"></div>
@@ -253,7 +245,7 @@
                 <div class="col">
                     <div class="work__experience">
 
-                        <img src="./img/orlando-dental-care.jpg" alt="Dentist and patient" class="experience__img" />
+                        <img src="./img/orlando-dental-care.jpg"  alt="Dentist and patient" class="experience__img" />
 
                     </div>
                 </div>
@@ -302,28 +294,28 @@
 
             <!-- CUSTOMER SERVICE -->
             <div class="row">
-                <div class="col">
+                <div class="col-md-3 col-12">
                     <div class="services">
                         <img src="./icons/excellence.png" alt="Checkmark icon" class="services__icon" />
                         <h4 class="services__header">Excellence</h4>
                         <p class="services__text"> Lorem ipsum dolor sit amet consectetur, adipisicing </p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-md-3 col-12">
                     <div class="services">
                         <img src="./icons/comfort.png" alt="Comfort icon" class="services__icon" />
                         <h4 class="services__header">Comfort</h4>
                         <p class="services__text"> Lorem ipsum dolor sit amet consectetur, adipisicing </p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-md-3 col-12">
                     <div class="services">
                         <img src="./icons/empathy.png" alt="Empathy icon" class="services__icon" />
                         <h4 class="services__header">Empathy</h4>
                         <p class="services__text"> Lorem ipsum dolor sit amet consectetur, adipisicing </p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-md-3 col-12">
                     <div class="services">
                         <img src="./icons/informative.png" alt="Informative icon" class="services__icon" />
                         <h4 class="services__header">Informative</h4>
@@ -337,7 +329,7 @@
     <section class="section-review">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-md-6  col-12 ">
                     <div class="customer">
                         <img src="./icons/quotes.png" alt="" class=" customer__img">
                         <p class="customer__review">
@@ -356,7 +348,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-6  col-12 ">
                     <div class="customer-request">
                         <div class="form">
                             <div class="form-content">
@@ -474,7 +466,7 @@
                     <div class="footer">
                         <img src="./img/logo-brandmark.png" alt="logo" class="footer__icon">
                         <p class="footer__text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quis
-                            ipsum quidem sequi </p>
+                            ipsum </p>
                     </div>
                 </div>
                 <div class="col">
